CHNG: Add UI Quad Card Component and Minor Changes First I did the CardUiQuad Component fot the UI cards to be like Amazon, there are different types of UI Card designs in Amazon, this one is for 4 linked images with respective text. I did the entire JS and CSS of the component. Test the CardUiQuad in the Home Component. Fix a problem where the width was larger than the viewport causing undesired horizontal scroll. In index.css I added a bg color to the body and text-decoration none to * (all)

--- a/src/Home.css
+++ b/src/Home.css
@@ -19,7 +19,7 @@
     min-height: 500px;
     object-fit: cover;
     z-index: -1;
-    margin-bottom: -250px;
+    margin-bottom: -300px;
     mask-position: bottom;
     mask-image: linear-gradient(
         to bottom,
